# vim-dogrun

./: .gitignore  CLAUDE.md  LICENSE  README.md  renovate.json5
.github/workflows/: ci.yaml  ci.yml
autoload/clap/themes/: dogrun.vim
autoload/lightline/colorscheme/: dogrun.vim
colors/: dogrun.vim
generator/: .gitignore  Cargo.toml  Makefile  README.md  justfile  mise.toml
generator/src/: conv.rs  highlight.rs  lib.rs  main.rs
generator/tests/: fzf_generation.rs  readme_update.rs  wezterm_structure.rs
term/: dogrun.itermcolors
wezterm/: dogrun.toml
