[package]
name = "dogrun"
version = "0.1.0"
authors = ["tsuyoshiwada <wadackel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
tint = "1.0.0"
lazy_static = "1.4.0"
delta_e = "0.2"
lab = "0.7.2"
