[package]
name = "dogrun"
version = "0.1.0"
authors = ["tsuyoshiwada <wadackel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["cargo"] }
tint = "1.0.0"
lazy_static = "1.4.0"
empfindung = "0.2"
lab = "0.11.0"

[dev-dependencies]
toml = "0.9"
regex = "1.10"
tempfile = "3.14"
